--- a/css/custom.css
+++ b/css/custom.css
@@ -67,3 +67,21 @@
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-size: cover; }
+
+.breadcrumb-area-faq {
+  background: url(../images/service/faq.jpg) no-repeat scroll center center;
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-size: cover; }
+
+.breadcrumb-area-hardware {
+  background: url(../images/service/hardware-cover.jpg) no-repeat scroll center center;
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-size: cover; }
+
+.breadcrumb-area-mg {
+  background: url(../images/service/motiongraphics-cover.jpg) no-repeat scroll center center;
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-size: cover; }
